# velox-oap

./: CMakeLists.txt
scripts/: setup-ubuntu.sh
velox/buffer/: Buffer.h
velox/common/base/: Status.h
velox/common/compression/: CMakeLists.txt  Compression.cpp  Compression.h  Lz4Compression.cpp  Lz4Compression.h  SnappyCompression.cpp  SnappyCompression.h  ZlibCompression.cpp  ZlibCompression.h  ZstdCompression.cpp  ZstdCompression.h
velox/common/compression/tests/: CompressionTest.cpp
velox/common/compression/v2/: CMakeLists.txt  Compression.cpp  Compression.h  GzipCompression.h  HadoopCompressionFormat.h  Lz4Compression.h
velox/common/compression/v2/tests/: CMakeLists.txt  CompressionTest.cpp
velox/common/memory/: ByteStream.h  Memory.cpp  Memory.h  MemoryPool.cpp  MemoryPool.h
velox/common/memory/tests/: MemoryManagerTest.cpp  MemoryPoolTest.cpp  MockSharedArbitratorTest.cpp
velox/common/process/: ThreadLocalRegistry.h
velox/connectors/hive/: SplitReader.cpp
velox/docs/functions/spark/: datetime.rst
velox/dwio/common/: SelectiveColumnReader.cpp  SelectiveStructColumnReader.cpp
velox/dwio/common/compression/: CMakeLists.txt  (+6 more)
velox/exec/: HashTable.cpp  Task.h
velox/exec/tests/: HashJoinTest.cpp  TableScanTest.cpp
velox/flag_definitions/: flags.cpp
velox/functions/sparksql/: CMakeLists.txt  DateTimeFunctions.cpp  DateTimeFunctions.h  Hash.cpp  MightContain.cpp  Register.cpp
velox/row/: CompactRow.cpp  CompactRow.h
velox/row/benchmark/: UnsafeRowSerializeBenchmark.cpp
velox/serializers/: CMakeLists.txt  PrestoSerializer.cpp
(+17 files in other folders)
